# joetracer

./: #Functions.cpp#  #Hittable.h#  #Scene.cpp#  #onb.h#  #profile.txt#  .#Functions.cpp  .PinholeCamera.h.~undo-tree~  .Scene.h.~undo-tree~  .gitignore  .gitmodules  BVHNode.cpp  CMakeCache.txt  CMakeLists.txt  Compute.cu~  Compute.h  Compute.h~  Const.h  Const.h~  ConstantMedium.cpp  ConstantMedium.cpp~  ConstantMedium.h  Functions.cpp  Functions.h  Hittable.h  Joetracer  Light.h  Makefile  Makefile copy  Move.cpp  Move.cpp~  Move.h  Move.h~  PinholeCamera.cpp  PinholeCamera.h  Point.cpp  Point.h  README.md  RandomGenerator.cpp  RandomGenerator.cpp~  RandomGenerator.h~  (+36 more)
.cache/clangd/index/: BVHNode.cpp.53E67E19F81C9DCB.idx  BVHNode.h.143288D4C22135C7.idx  CheckerTexture.h.A49B2310A940B68A.idx  Compute.h.73BA5795BB31A400.idx  Const.h.ED62645992289516.idx  ConstantMedium.cpp.4EEE28E6E83C1D6E.idx  ConstantMedium.h.BCC11856EA70A46D.idx  CosineONB_PDF.h.9DA0238047F9D6B8.idx  CosinePDF.h.E6C91D1EFA6670D8.idx  Dielectrics.h.DF6BFCB678F5C6AA.idx  Emissive.h.5D9EFDCFC3E1697D.idx  Functions.cpp.2025F8C2D55DD9AB.idx  Functions.h.909C84ACFC9D8B01.idx  Hittable.h.60A0DB12DC7BDF16.idx  HittablePDF.h.83B3B020FBCBAF61.idx  ImageTexture.h.C70C705D8A8A587B.idx  Isotropic.h.A27AD0A9F5B521A9.idx  Lambertian.h.DD9E23306EAADDD8.idx  Lambertian_ONB.h.623A1E46EE820F95.idx  Light.cpp.BFC5719F0F16D9D2.idx  Light.h.688BB2925D64E029.idx  Matrix.cpp.586FD115EA1BB83C.idx  Matrix.h.BB240060CBFE0B6F.idx  Metal.h.5FCE91CEB479CDFC.idx  MixturePDF.h.03C5F068B16A5D47.idx  Move.cpp.E483A60012C675F6.idx  Move.h.D316B154B403B535.idx  PerlinTexture.h.AE528C8C195A9889.idx  PinholeCamera.cpp.B71A1FD20AFEBBEB.idx  PinholeCamera.h.480E64E4762980EC.idx  Point.cpp.77DD41C2B5739DFA.idx  Point.h.A80EF9196E8656DF.idx  RandomGenerator.cpp.366FFAF5C57A359F.idx  RandomGenerator.h.540A9AA8DCF21539.idx  Ray.cpp.2B98C5F7CA04AF78.idx  Ray.h.EC440E0487276040.idx  Rotation.cpp.7F5667C3F2BAE846.idx  Rotation.h.A9689C7CF17F7C6C.idx  Scene.cpp.E895EF2387BCDB55.idx  Scene.h.40413C071871418D.idx  (+33 more)
Materials/: Dielectrics.h  Emissive.h  Isotropic.h  Isotropic.h~  Lambertian.h  Lambertian_ONB.h  Lambertian_ONB.h~  Metal.h
Textures/: ImageTexture.h  PerlinTexture.h  Texture.h
Triangle Stuff/: Surfel.h
extraneous/: Materials.cpp  Triangle Stuff.txt
extraneous/Triangle Stuff/: Triangle.cpp  Triangle.h
gui/: menu.c
gui/imgui/: Makefile  cmake_install.cmake  imgui.ini
gui/imgui/backends/: cmake_install.cmake  imgui_impl_sdl.cpp
gui/nuklear/: Makefile  demoabc  main.c
gui/nuklear/demo/sdl_renderer/: main.c
include/imgui/: CMakeLists.txt
include/imgui/backends/: CMakeLists.txt  Makefile  imgui_impl_sdlrenderer.cpp
pdf/: CosineONB_PDF.h  CosinePDF.h  HittablePDF.h  MixturePDF.h
prims/: .BVHNode.h.~undo-tree~  .Hittable.h.~undo-tree~  .Light.h.~undo-tree~  .Sphere.h.~undo-tree~  BVHNode.cpp  BVHNode.h  Hittable.h  Light.cpp  Light.h  Sphere.cpp  Sphere.h
prims/Materials/: Dielectrics.h  Emissive.h  Lambertian.h  Metal.h
prims/Textures/: CheckerTexture.h  ImageTexture.h  PerlinTexture.h  SolidColour.h  Texture.h
src/: #ConstantMedium.cpp#  BVHNode.cpp  BVHNode.h  CMakeLists.txt~  Colour.cpp  Colour.h  Compute.cu  Const.h  ConstantMedium.cpp  ConstantMedium.h  Functions.cpp  Functions.h  Hittable.h  Light.cpp  Light.h  Makefile  Matrix.cpp  Matrix.h  Move.cpp  Move.h  PinholeCamera.cpp  PinholeCamera.h  Point.cpp  Point.h  RandomGenerator.cpp  RandomGenerator.h  Ray.cpp  Ray.h  Rotation.cpp  Rotation.h  SampleScenes.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Translate.cpp  Translate.h  Triangle.cpp  Triangle.h  TriangleMesh.h  (+15 more)
src/Materials/: #Lambertian.h#  Dielectrics.h  Emissive.h  Isotropic.h  Lambertian.h  Lambertian_ONB.h  Metal.h
src/Textures/: CheckerTexture.h  ImageTexture.h  PerlinTexture.h  SolidColour.h  Texture.h
src/pdf/: CosineONB_PDF.h  CosinePDF.h  HittablePDF.h  MixturePDF.h
utils/: .Functions.h.~undo-tree~  .Point.h.~undo-tree~  .Ray.h.~undo-tree~  .Vec.h.~undo-tree~  .aabb.h.~undo-tree~  Camera.h  Functions.cpp  Functions.h  Hittable.h  ImageReader.h  Light.cpp  Light.h  Materials.cpp  Materials.h  Object.cpp  Object.h  Point.cpp  Point.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Surfel.cpp  Surfel.h  Triangle.cpp  Triangle.h  TriangleList.cpp  TriangleList.h  Vec.cpp  Vec.h  VectorOps.cpp  VectorOps.h  aabb.cpp  aabb.h
utils/Materials/: Dielectrics.h  Lambertian.h  Metal.h
utils/light/: Radiance.h
utils/math/: VectorOps.cpp  VectorOps.h
